--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Madhj| Template Three</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+
+    <!-- Render All Element Normally -->
+    <link rel="stylesheet" href="CSS/Normlazi.css">
+
+    <!-- Link for FontAwesome  -->
+    <link rel="stylesheet" href="CSS/all.min.css">
+
+    <!-- Main Template Css File -->
+    <link rel="stylesheet" href="CSS/Madhj.css">
+
+    <!-- Link of Open Sans font-family from Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <a href="#" class="logo">Madhj</a>
+            <ul class="main-nav">
+                <li><a href="#Articles">articles</a></li>
+                <li><a href="#Gallery">gallery</a></li>
+                <li><a href="#Features">features</a></li>
+                <li><a href="#">Other links</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
