landing section has be done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- Render All Element Normally -->
-    <link rel="stylesheet" href="CSS/Normlazi.css">
+    <link rel="stylesheet" href="Css/Normlazi.css">
 
     <!-- Link for FontAwesome  -->
-    <link rel="stylesheet" href="CSS/all.min.css">
+    <link rel="stylesheet" href="Css/all.min.css">
 
     <!-- Main Template Css File -->
-    <link rel="stylesheet" href="CSS/Madhj.css">
+    <link rel="stylesheet" href="Css/Madhj.css">
 
     <!-- Link of Open Sans font-family from Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,21 @@
     </header>
 
     <main>
-
+        <section class="landing">
+            <div class="container">
+                <div class="text">
+                    <h1>Welcome, To Madhj World</h1>
+                    <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and
+                        Events</p>
+                </div>
+                <div class="image">
+                    <img src="images/landing-image.png" alt="">
+                </div>
+            </div>
+            <a href="#Articles" class="go-down">
+                <i class="fas fa-angle-double-down fa-2x"></i>
+            </a>
+        </section>
     </main>
 
     <footer>
