Articles section done

--- a/index.html
+++ b/index.html
@@ -93,6 +93,103 @@
                 <i class="fas fa-angle-double-down fa-2x"></i>
             </a>
         </section>
+        <section id="Articles" class="articles padding-section">
+            <h2 class="main-heading">articles</h2>
+            <div class="container">
+                <div class="card">
+                    <img src="images/cat-01.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-02.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-03.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-04.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-05.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-06.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-07.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/cat-08.jpg" alt="" />
+                    <div class="content">
+                        <h3>Test Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    </div>
+                    <div class="info">
+                        <a href="">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="gallery">
+
+        </section>
     </main>
     <footer>
 
