--- a/index.html
+++ b/index.html
@@ -186,9 +186,363 @@
                 </div>
             </div>
         </section>
-        
-        <section class="gallery">
+        <section class="gallery padding-section" id="Gallery">
+            <h2 class="main-heading">Gallery</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-01.png" alt="" />
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-02.png" alt="" />
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-03.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-04.png" alt="" />
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-05.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="images/gallery-06.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="features padding-section" id="Features">
+            <h2 class="main-heading">Features</h2>
+            <div class="container">
+                <div class="box quality">
+                    <div class="img-holder"><img src="images/features-01.jpg" alt="" /></div>
+                    <h2>Quality</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima
+                    </p>
+                    <a href="#">More</a>
+                </div>
+                <div class="box time">
+                    <div class="img-holder"><img src="images/features-02.jpeg" alt="" /></div>
+                    <h2>Time</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima
+                    </p>
+                    <a href="#">More</a>
+                </div>
+                <div class="box passion">
+                    <div class="img-holder"><img src="images/features-03.jpg" alt="" /></div>
+                    <h2>Passion</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima
+                    </p>
+                    <a href="#">More</a>
+                </div>
+        </section>
+        <section class="testimonials padding-section" id="testimonials">
+            <h2 class="main-heading">Testimonials</h2>
+            <div class="container">
+                <div class="box">
+                    <img src="images/avatar-01.png" alt="" />
+                    <h3>Mohamed Farag</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="images/avatar-02.jpg" alt="" />
+                    <h3>Mohamed Ibrahim</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="images/avatar-03.jpg" alt="" />
+                    <h3>Shady Nabil</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="images/avatar-04.jpg" alt="" />
+                    <h3>Amr Hendawy</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="images/avatar-05.png" alt="" />
+                    <h3>Sherief Ashraf</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="images/avatar-06.jpg" alt="" />
+                    <h3>Osama Mohamed</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus
+                        quaerat ducimus
+                    </p>
+                </div>
+            </div>
+        </section>
 
+
+        <section class="team padding-section" id="team">
+            <h2 class="main-heading">Team Members</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-01.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-02.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-03.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-04.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-05.png" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-06.png" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-07.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="data">
+                        <img src="images/team-08.jpg" alt="" />
+                        <div class="social">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Name</h3>
+                        <p>Simple Short Description</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
