--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <a href="#" class="logo">Madhj</a>
             <ul class="main-nav">
@@ -93,7 +93,12 @@
                 <i class="fas fa-angle-double-down fa-2x"></i>
             </a>
         </section>
-        <section id="Articles" class="articles padding-section">
+        <div class="up">
+            <a href="#header">
+                <i class="fas fa-angle-double-up fa-2x"></i>
+            </a>
+        </div>
+        <section class="articles padding-section" id="Articles">
             <h2 class="main-heading">articles</h2>
             <div class="container">
                 <div class="card">
@@ -353,14 +358,12 @@
                 </div>
             </div>
         </section>
-
-
         <section class="team padding-section" id="team">
             <h2 class="main-heading">Team Members</h2>
             <div class="container">
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-01.jpg" alt="" />
+                        <img src="images/avatar-01.png" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -383,7 +386,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-02.jpg" alt="" />
+                        <img src="images/avatar-03.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -406,7 +409,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-03.jpg" alt="" />
+                        <img src="images/avatar-02.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -429,7 +432,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-04.jpg" alt="" />
+                        <img src="images/avatar-03.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -452,7 +455,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-05.png" alt="" />
+                        <img src="images/avatar-03.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -475,7 +478,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-06.png" alt="" />
+                        <img src="images/avatar-02.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -498,7 +501,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-07.jpg" alt="" />
+                        <img src="images/avatar-01.png" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -521,7 +524,7 @@
                 </div>
                 <div class="box">
                     <div class="data">
-                        <img src="images/team-08.jpg" alt="" />
+                        <img src="images/avatar-03.jpg" alt="" />
                         <div class="social">
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -541,6 +544,275 @@
                         <h3>Name</h3>
                         <p>Simple Short Description</p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="services padding-section" id="services">
+            <h2 class="main-heading">Services</h2>
+            <div class="container">
+                <div class="box">
+                    <i class="fas fa-user-shield fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-tools fa-4x"></i>
+                    <h3>Fixing Issues</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-map-marked-alt fa-4x"></i>
+                    <h3>Location</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-laptop-code fa-4x"></i>
+                    <h3>Coding</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-palette fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Design</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-bullhorn fa-4x"></i>
+                    <h3>Marketing</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our-skills padding-section" id="our-skills">
+            <h2 class="main-heading">Our Skills</h2>
+            <div class="container">
+                <img src="images/skills.png" alt="" />
+                <div class="skills">
+                    <div class="skill">
+                        <h3>HTML</h3>
+                        <div class="the-progress">
+                            <span style="width: 80%;" data-width="80%"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>CSS</h3>
+                        <div class="the-progress">
+                            <span style="width: 85%;" data-width="85%"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>JavaScript</h3>
+                        <div class="the-progress">
+                            <span style="width: 70%" data-width="70%"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>Python</h3>
+                        <div class="the-progress">
+                            <span style="width: 80%" data-width="80%"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="work-steps padding-section" id="work-steps">
+            <h2 class="main-heading">How It Works ?</h2>
+            <div class="container">
+                <img src="images/work-steps.png" alt="" class="image" />
+                <div class="info">
+                    <div class="box">
+                        <img src="images/work-steps-1.png" alt="" />
+                        <div class="text">
+                            <h3>Business Analysis</h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum
+                                recusandae debitis vel
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="images/work-steps-2.png" alt="" />
+                        <div class="text">
+                            <h3>Architecture</h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum
+                                recusandae debitis vel
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="images/work-steps-3.png" alt="" />
+                        <div class="text">
+                            <h3>Developement</h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum
+                                recusandae debitis vel
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="events padding-section" id="events">
+            <div class="dots dots-up"></div>
+            <div class="dots dots-down"></div>
+            <h2 class="main-heading">Latest Events</h2>
+            <div class="container">
+                <img src="images/events.png" alt="" />
+                <div class="info">
+                    <div class="time">
+                        <div class="unit">
+                            <span class="days">15</span>
+                            <span>Days</span>
+                        </div>
+                        <div class="unit">
+                            <span class="hours">08</span>
+                            <span>Hours</span>
+                        </div>
+                        <div class="unit">
+                            <span class="minutes">45</span>
+                            <span>Minutes</span>
+                        </div>
+                        <div class="unit">
+                            <span class="seconds">55</span>
+                            <span>Seconds</span>
+                        </div>
+                    </div>
+                    <h2 class="title">Tech Masters Event 2021</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut
+                        adipisci quam
+                        ratione aliquam excepturi nulla in harum, veritatis porro
+                    </p>
+                </div>
+                <div class="subscribe">
+                    <form action="">
+                        <input type="email" placeholder="Enter Your Email" />
+                        <input type="submit" value="Subscribe" />
+                    </form>
+                </div>
+            </div>
+        </section>
+        <section class="pricing padding-section" id="pricing">
+            <div class="dots dots-up"></div>
+            <div class="dots dots-down"></div>
+            <h2 class="main-heading">Pricing Plans</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="title">Basic</div>
+                    <img src="images/hosting-basic.png" alt="" />
+                    <div class="price">
+                        <span class="amount">$15</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li>10GB HDD Space</li>
+                        <li>5 Email Addresses</li>
+                        <li>2 Subdomains</li>
+                        <li>4 Databases</li>
+                        <li>Basic Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+                <div class="box popular">
+                    <div class="label">Most Popular</div>
+                    <div class="title">Advanced</div>
+                    <img src="images/hosting-advanced.png" alt="" />
+                    <div class="price">
+                        <span class="amount">$25</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li>20GB HDD Space</li>
+                        <li>10 Email Addresses</li>
+                        <li>5 Subdomains</li>
+                        <li>8 Databases</li>
+                        <li>Advanced Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+                <div class="box">
+                    <div class="title">Professional</div>
+                    <img src="images/hosting-professional.png" alt="" />
+                    <div class="price">
+                        <span class="amount">$45</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li>50GB HDD Space</li>
+                        <li>20 Email Addresses</li>
+                        <li>10 Subdomains</li>
+                        <li>20 Databases</li>
+                        <li>Professional Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+            </div>
+        </section>
+        <section class="videos padding-section" id="video">
+            <h2 class="main-heading">Top Videos</h2>
+            <div class="container">
+                <div class="holder">
+                    <div class="list">
+                        <div class="name">
+                            Top Videos
+                            <i class="fas fa-random"></i>
+                        </div>
+                        <ul>
+                            <li>How To Create Sub Domain<span>05:18</span></li>
+                            <li>Playing With The DNS <span>03:18</span></li>
+                            <li>Everything About The Virtual Hosts <span>05:25</span></li>
+                            <li>How To Monitor Your Website <span>04:16</span></li>
+                            <li>Uncharted Beating The Last Boss <span>07:48</span></li>
+                            <li>Ys Oath In Felghana Overview <span>03:12</span></li>
+                            <li>Ys Series All Games Ending <span>08:10</span></li>
+                        </ul>
+                    </div>
+                    <div class="preview">
+                        <img src="images/video-preview.jpg" alt="" />
+                        <div class="info">Everything About The Virtual Hosts</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="stats padding-section id="stats">
+            <h2>Our Awesome Stats</h2>
+            <div class="container">
+                <div class="box">
+                    <i class="far fa-user fa-2x fa-fw"></i>
+                    <span class="number" data-goal="150">300</span>
+                    <span class="text">Clients</span>
+                </div>
+                <div class="box">
+                    <i class="fas fa-code fa-2x fa-fw"></i>
+                    <span class="number" data-goal="135">400</span>
+                    <span class="text">Projects</span>
+                </div>
+                <div class="box">
+                    <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+                    <span class="number" data-goal="50">12</span>
+                    <span class="text">Countries</span>
+                </div>
+                <div class="box">
+                    <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+                    <span class="number" data-goal="500">500K</span>
+                    <span class="text">Money</span>
                 </div>
             </div>
         </section>
