--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                 </div>
             </div>
         </section>
+        <div class="spikes"></div>
         <section class="gallery padding-section" id="Gallery">
             <h2 class="main-heading">Gallery</h2>
             <div class="container">
@@ -358,6 +359,7 @@
                 </div>
             </div>
         </section>
+        
         <section class="team padding-section" id="team">
             <h2 class="main-heading">Team Members</h2>
             <div class="container">
@@ -547,6 +549,7 @@
                 </div>
             </div>
         </section>
+        <div class="spikes"></div>
         <section class="services padding-section" id="services">
             <h2 class="main-heading">Services</h2>
             <div class="container">
@@ -789,9 +792,7 @@
                 </div>
             </div>
         </section>
-
-
-        <section class="stats padding-section id="stats">
+        <section class="stats padding-section" id="stats">
             <h2>Our Awesome Stats</h2>
             <div class="container">
                 <div class="box">
@@ -816,10 +817,95 @@
                 </div>
             </div>
         </section>
+        <section class="discount" id="discount">
+            <div class="image">
+                <div class="content">
+                    <h2>We Have A Discount</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur,
+                        recusandae
+                        ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel
+                        similique
+                        laborum dicta aperiam odit doloribus corporis.
+                    </p>
+                    <img src="images/discount.png" alt="" />
+                </div>
+            </div>
+            <div class="form">
+                <div class="content">
+                    <h2>Request A Discount</h2>
+                    <form action="">
+                        <input class="input" type="text" placeholder="Your Name" name="name" />
+                        <input class="input" type="email" placeholder="Your Email" name="email" />
+                        <input class="input" type="text" placeholder="Your Phone" name="mobile" />
+                        <textarea class="input" placeholder="Tell Us About Your Needs" name="message"></textarea>
+                        <input type="submit" value="Send" />
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="box">
+                <h3>Madhj</h3>
+                <ul class="social">
+                    <li>
+                        <a href="#" class="facebook">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="youtube">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p class="text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste
+                    aspernatur
+                </p>
+            </div>
+            <div class="box">
+                <ul class="links">
+                    <li><a href="#">Important Link 1</a></li>
+                    <li><a href="#">Important Link 2</a></li>
+                    <li><a href="#">Important Link 3</a></li>
+                    <li><a href="#">Important Link 4</a></li>
+                    <li><a href="#">Important Link 5</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <div class="line">
+                    <i class="fas fa-map-marker-alt fa-fw"></i>
+                    <div class="info">Yemen, Hadhrmout, Inside my room(-_-)</div>
+                </div>
+                <div class="line">
+                    <i class="far fa-clock fa-fw"></i>
+                    <div class="info">Business Hours: From 10:00 To 18:00</div>
+                </div>
+                <div class="line">
+                    <i class="fas fa-phone-volume fa-fw"></i>
+                    <div class="info">
+                        <span>+967773069358</span>
+                        <span>+967771391719</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box footer-gallery">
+                <img src="images/gallery-01.png" alt="" />
+                <img src="images/gallery-02.png" alt="" />
+                <img src="images/gallery-03.jpg" alt="" />
+                <img src="images/gallery-04.png" alt="" />
+                <img src="images/gallery-05.jpg" alt="" />
+                <img src="images/gallery-06.png" alt="" />
+            </div>
+        </div>
+        <p class="copyright">Made With ❤️, By Ahmed Raed with My teacher Osama Elzero😁</p>
     </footer>
 </body>
-
-</html>
